fixed hambuger on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -19,6 +19,7 @@ header {
   padding: 20px 0;
   text-align: center;
   transition: background 0.4s ease;
+  position: relative;
 }
 
 header h1 {
@@ -180,7 +181,7 @@ body.dark-mode .slider {
   color: #fff;
   padding: 10px;
   position: absolute;
-  top: 20px;
+  top: 80px;
   left: 20px;
   z-index: 10;
 }
